--- a/style.css
+++ b/style.css
@@ -39,11 +39,14 @@ abbr[title] {
     /* 2 */
 }
 
-b, strong {
+b,
+strong {
     font-weight: bolder;
 }
 
-code, kbd, samp {
+code,
+kbd,
+samp {
     font-family: monospace, monospace;
     /* 1 */
     font-size: 1em;
@@ -54,7 +57,8 @@ small {
     font-size: 80%;
 }
 
-sub, sup {
+sub,
+sup {
     font-size: 75%;
     line-height: 0;
     position: relative;
@@ -71,7 +75,11 @@ img {
     border-style: none;
 }
 
-button, input, optgroup, select, textarea {
+button,
+input,
+optgroup,
+select,
+textarea {
     font-family: inherit;
     /* 1 */
     font-size: 100%;
@@ -82,26 +90,37 @@ button, input, optgroup, select, textarea {
     /* 2 */
 }
 
-button, input {
+button,
+input {
     /* 1 */
     overflow: visible;
 }
 
-button, select {
+button,
+select {
     /* 1 */
     text-transform: none;
 }
 
-button, [type="button"], [type="reset"], [type="submit"] {
+button,
+[type='button'],
+[type='reset'],
+[type='submit'] {
     -webkit-appearance: button;
 }
 
-button::-moz-focus-inner, [type="button"]::-moz-focus-inner, [type="reset"]::-moz-focus-inner, [type="submit"]::-moz-focus-inner {
+button::-moz-focus-inner,
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner {
     border-style: none;
     padding: 0;
 }
 
-button:-moz-focusring, [type="button"]:-moz-focusring, [type="reset"]:-moz-focusring, [type="submit"]:-moz-focusring {
+button:-moz-focusring,
+[type='button']:-moz-focusring,
+[type='reset']:-moz-focusring,
+[type='submit']:-moz-focusring {
     outline: 1px dotted ButtonText;
 }
 
@@ -132,25 +151,27 @@ textarea {
     overflow: auto;
 }
 
-[type="checkbox"], [type="radio"] {
+[type='checkbox'],
+[type='radio'] {
     box-sizing: border-box;
     /* 1 */
     padding: 0;
     /* 2 */
 }
 
-[type="number"]::-webkit-inner-spin-button, [type="number"]::-webkit-outer-spin-button {
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
     height: auto;
 }
 
-[type="search"] {
+[type='search'] {
     -webkit-appearance: textfield;
     /* 1 */
     outline-offset: -2px;
     /* 2 */
 }
 
-[type="search"]::-webkit-search-decoration {
+[type='search']::-webkit-search-decoration {
     -webkit-appearance: none;
 }
 
@@ -190,11 +211,11 @@ template {
 ----------------------------------------------------------------------------- */
 
 html {
-    font-size:62.5%;
+    font-size: 62.5%;
 }
 
 body {
-    background:#fff;
+    background: #fff;
     color: #000;
     font-family: Arial, sans-serif;
     -webkit-overflow-scrolling: touch;
@@ -205,11 +226,11 @@ body {
 ----------------------------------------------------------------------------- */
 
 header {
-    padding:60px 0;
+    padding: 60px 0;
 }
 
 h1 {
-    font-size:4rem;
+    font-size: 4rem;
     text-align: center;
     font-weight: bold;
     font-style: italic;
@@ -219,46 +240,45 @@ h1 {
 }
 
 button {
-    background:#333;
-    border:0;
+    background: #333;
+    border: 0;
     font-size: 1.6rem;
     font-weight: bold;
-    padding:8px 14px;
+    padding: 8px 14px;
     text-transform: uppercase;
-    color:#fff;
-    cursor:pointer;
+    color: #fff;
+    cursor: pointer;
 }
 
 button:hover {
     color: #333;
-    background: rgb(255, 208, 0);   
+    background: rgb(255, 208, 0);
 }
-
 
 #content {
     width: 980px;
-    margin:0 auto;
+    margin: 0 auto;
 }
 
 aside {
     float: left;
-    padding:0 20px 0 0;
+    padding: 0 20px 0 0;
 }
 
 #grid {
     width: 640px;
     height: 640px;
     background: #ccc;
-    display:grid;
+    display: grid;
     grid-template-columns: repeat(16, 1fr);
-    grid-template-rows: repeat(16, 1fr);    
+    grid-template-rows: repeat(16, 1fr);
 }
 
 #grid > div {
     background: #fff;
-    border:1px solid black;
+    border: 1px solid black;
 }
 
-#grid > div.active{
+#grid > div.active {
     background: red;
 }
